export const snapshot = {};

snapshot[`global > get all 1`] = `
{
  bar: 123,
  foo: "bar",
  timed: "out of time",
}
`;

snapshot[`global > get all 2`] = `
{
  bar: 123,
  foo: "😎",
  timed: "out of time",
}
`;

snapshot[`global > get all 3`] = `
{
  bar: 123,
  foo: "☂️",
  timed: "out of time",
}
`;

snapshot[`global > get all 4`] = `
{
  bar: 123,
  foo: "🌊",
  timed: "out of time",
}
`;

snapshot[`global > get all 5`] = `
{
  bar: 123,
  foo: "🏄‍♂️",
  timed: "out of time",
}
`;

snapshot[`global > get all 6`] = `
{
  bar: 123,
  foo: "Async payload",
  timed: "out of time",
}
`;
